# mydrift

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml  settings.py
.devcontainer/: devcontainer.json
.github/workflow/: pr-agent-review.yml
.github/workflows/: ci.yml  pr-agent-review.yml
docker/: Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.streamlit  docker-compose.yaml  ollama-entrypoint.sh
src/: app.py  consts.py  run_api.py  settings.py  utils.py
src/agent/: base.py  chat_agent.py  client.py
src/agent/settings/: chat_agent_prompts.toml
src/api/: app.py  schema.py  utils.py
src/api/router/: auth.py  chat.py  ingest.py  memory.py
src/core/: agent_handler.py  chat_handler.py  gmail_handler.py  llm_handler.py  message_handler.py  reindex_handler.py  utils.py
src/database/mongodb/: base.py  chat_doc.py  client.py  gmail_doc.py
src/database/qdrant/: base.py  chat_vec.py  client.py  rag_vec_store.py
src/embedding/: base.py  encoder.py  loader.py
src/schema/: chat.py
src/tests/: conftest.py  test_qdrant.py
src/ui/: app.py
ui/: Dockerfile.streamlit  app.py
